--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#939393"
+    android:background="#000000"
     tools:context=".ui.music_player.MusicPlayerActivity">
 
     <ImageView
@@ -14,195 +14,176 @@
         android:layout_gravity="center"
         android:contentDescription="@string/album_artwork"
         android:scaleType="centerCrop"
-        android:background="#00A3BF" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <ImageButton
+        android:id="@+id/music_play_pause_btn"
+        style="@style/MusicControlBtn"
+        android:layout_width="@dimen/music_play_pause_btn_size"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="84dp"
+        android:contentDescription="@string/play_pause_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/levellist_play_pause_button" />
 
-        <ImageButton
-            android:id="@+id/music_play_pause_btn"
-            style="@style/MusicControlBtn"
-            android:layout_width="@dimen/music_play_pause_btn_size"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="84dp"
-            android:contentDescription="@string/play_pause_btn"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/levellist_play_pause_button" />
+    <ImageButton
+        android:id="@+id/music_skip_next_btn"
+        style="@style/MusicControlBtn"
+        android:layout_width="@dimen/music_small_control_btn_size"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:contentDescription="@string/skip_forward_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/music_play_pause_btn"
+        app:layout_constraintStart_toEndOf="@+id/music_play_pause_btn"
+        app:layout_constraintTop_toTopOf="@+id/music_play_pause_btn"
+        app:srcCompat="@drawable/ic_skip_next_white_24dp"
+        tools:ignore="TouchTargetSizeCheck" />
 
-        <ImageButton
-            android:id="@+id/music_skip_next_btn"
-            style="@style/MusicControlBtn"
-            android:layout_width="@dimen/music_small_control_btn_size"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:contentDescription="@string/skip_forward_btn"
-            app:layout_constraintBottom_toBottomOf="@+id/music_play_pause_btn"
-            app:layout_constraintStart_toEndOf="@+id/music_play_pause_btn"
-            app:layout_constraintTop_toTopOf="@+id/music_play_pause_btn"
-            app:srcCompat="@drawable/ic_skip_next_white_24dp"
-            tools:ignore="TouchTargetSizeCheck" />
+    <ImageButton
+        android:id="@+id/music_skip_prev_btn"
+        style="@style/MusicControlBtn"
+        android:layout_width="@dimen/music_small_control_btn_size"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:contentDescription="@string/skip_backward_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/music_play_pause_btn"
+        app:layout_constraintEnd_toStartOf="@+id/music_play_pause_btn"
+        app:layout_constraintTop_toTopOf="@+id/music_play_pause_btn"
+        app:srcCompat="@drawable/ic_skip_prev_white_24dp"
+        tools:ignore="TouchTargetSizeCheck" />
 
-        <ImageButton
-            android:id="@+id/music_skip_prev_btn"
-            style="@style/MusicControlBtn"
-            android:layout_width="@dimen/music_small_control_btn_size"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:contentDescription="@string/skip_backward_btn"
-            app:layout_constraintBottom_toBottomOf="@+id/music_play_pause_btn"
-            app:layout_constraintEnd_toStartOf="@+id/music_play_pause_btn"
-            app:layout_constraintTop_toTopOf="@+id/music_play_pause_btn"
-            app:srcCompat="@drawable/ic_skip_prev_white_24dp"
-            tools:ignore="TouchTargetSizeCheck" />
+    <ImageButton
+        android:id="@+id/repeat_btn"
+        style="@style/MusicControlBtn"
+        android:layout_width="@dimen/music_small_control_btn_size"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:contentDescription="@string/repeat_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/music_play_pause_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/music_play_pause_btn"
+        app:srcCompat="@drawable/levellist_repeat_btn"
+        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
 
-        <ImageButton
-            android:id="@+id/repeat_btn"
-            style="@style/MusicControlBtn"
-            android:layout_width="@dimen/music_small_control_btn_size"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:contentDescription="@string/repeat_btn"
-            app:layout_constraintBottom_toBottomOf="@+id/music_play_pause_btn"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/music_play_pause_btn"
-            app:srcCompat="@drawable/levellist_repeat_btn"
-            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
+    <ImageButton
+        android:id="@+id/shuffle_btn"
+        style="@style/MusicControlBtn"
+        android:layout_width="@dimen/music_small_control_btn_size"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/shuffle_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/music_play_pause_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/music_play_pause_btn"
+        app:srcCompat="@drawable/levellist_shuffle_btn"
+        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
 
-        <ImageButton
-            android:id="@+id/shuffle_btn"
-            style="@style/MusicControlBtn"
-            android:layout_width="@dimen/music_small_control_btn_size"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/shuffle_btn"
-            app:layout_constraintBottom_toBottomOf="@+id/music_play_pause_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/music_play_pause_btn"
-            app:srcCompat="@drawable/levellist_shuffle_btn"
-            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
+    <com.google.android.exoplayer2.ui.DefaultTimeBar
+        android:id="@+id/music_seekbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="40dp"
+        android:contentDescription="@string/seekbar"
+        app:buffered_color="#A6F4F4F4"
+        app:layout_constraintBottom_toTopOf="@+id/music_play_pause_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:played_color="@color/white"
+        app:scrubber_color="@color/white"
+        app:unplayed_color="#66F4F4F4" />
 
-        <com.google.android.exoplayer2.ui.DefaultTimeBar
-            android:id="@+id/music_seekbar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="40dp"
-            android:contentDescription="@string/seekbar"
-            app:buffered_color="#A6F4F4F4"
-            app:layout_constraintBottom_toTopOf="@+id/music_play_pause_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:played_color="@color/white"
-            app:scrubber_color="@color/white"
-            app:unplayed_color="#66F4F4F4" />
+    <TextView
+        android:id="@+id/music_current_position"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/default_playback_time"
+        android:textColor="@color/white"
+        android:textSize="19sp"
+        app:layout_constraintStart_toStartOf="@+id/music_seekbar"
+        app:layout_constraintTop_toBottomOf="@+id/music_seekbar" />
 
-        <TextView
-            android:id="@+id/music_current_position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/default_playback_time"
-            android:textColor="@color/white"
-            android:textSize="19sp"
-            app:layout_constraintStart_toStartOf="@+id/music_seekbar"
-            app:layout_constraintTop_toBottomOf="@+id/music_seekbar" />
+    <TextView
+        android:id="@+id/music_duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="@string/default_playback_time"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/music_seekbar"
+        app:layout_constraintTop_toBottomOf="@+id/music_seekbar"
+        tools:ignore="TextContrastCheck" />
 
-        <TextView
-            android:id="@+id/music_duration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="@string/default_playback_time"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="@+id/music_seekbar"
-            app:layout_constraintTop_toBottomOf="@+id/music_seekbar"
-            tools:ignore="TextContrastCheck" />
+    <TextView
+        android:id="@+id/music_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:text="@string/default_song_name"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toTopOf="@+id/music_seekbar"
+        app:layout_constraintStart_toStartOf="@+id/music_current_position" />
 
-        <TextView
-            android:id="@+id/music_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:text="@string/default_song_name"
-            android:textColor="@color/white"
-            android:textSize="28sp"
-            app:layout_constraintBottom_toTopOf="@+id/music_seekbar"
-            app:layout_constraintStart_toStartOf="@+id/music_current_position" />
+    <TextView
+        android:id="@+id/music_player_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/now_playing"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TextContrastCheck" />
 
-        <TextView
-            android:id="@+id/music_player_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/now_playing"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="TextContrastCheck" />
+    <TextView
+        android:id="@+id/music_artist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/default_artist_name"
+        android:textColor="@color/white"
+        android:textSize="19sp"
+        app:layout_constraintStart_toStartOf="@+id/music_current_position"
+        app:layout_constraintTop_toBottomOf="@+id/music_title" />
 
-        <TextView
-            android:id="@+id/music_artist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/default_artist_name"
-            android:textColor="@color/white"
-            android:textSize="19sp"
-            app:layout_constraintStart_toStartOf="@+id/music_current_position"
-            app:layout_constraintTop_toBottomOf="@+id/music_title" />
+    <ImageButton
+        android:id="@+id/music_more_btn"
+        style="@style/MusicControlBtn"
+        android:layout_width="28dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:contentDescription="@string/more_features_btn"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/music_seekbar"
+        app:layout_constraintEnd_toEndOf="@+id/music_duration"
+        app:srcCompat="@drawable/ic_more_white_24dp"
+        tools:ignore="TouchTargetSizeCheck" />
 
-        <ImageButton
-            android:id="@+id/music_more_btn"
-            style="@style/MusicControlBtn"
-            android:layout_width="28dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:contentDescription="@string/more_features_btn"
-            android:minWidth="48dp"
-            android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/music_seekbar"
-            app:layout_constraintEnd_toEndOf="@+id/music_duration"
-            app:srcCompat="@drawable/ic_more_white_24dp"
-            tools:ignore="TouchTargetSizeCheck" />
+    <ImageButton
+        android:id="@+id/music_close_btn"
+        style="@style/MusicControlBtn"
+        android:layout_width="28dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/close"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_arrow_down_white_24dp"
+        tools:ignore="ImageContrastCheck,ImageContrastCheck,TouchTargetSizeCheck" />
 
-        <ImageButton
-            android:id="@+id/music_close_btn"
-            style="@style/MusicControlBtn"
-            android:layout_width="28dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:contentDescription="@string/close"
-            android:minWidth="48dp"
-            android:minHeight="48dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_arrow_down_white_24dp"
-            tools:ignore="ImageContrastCheck,ImageContrastCheck,TouchTargetSizeCheck" />
-
-        <ImageView
-            android:id="@+id/default_album_art"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            android:scaleType="fitCenter"
-            app:layout_constraintBottom_toTopOf="@+id/music_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/music_player_title"
-            app:srcCompat="@drawable/ic_album_white_24dp"
-            android:contentDescription="@string/default_album_art" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
