--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -8,7 +8,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/song_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="4dp" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
