--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_cyan">#7BDAEB</color>
-    <color name="cyan">#44C9E1</color>
-    <color name="dark_cyan">#29829C</color>
+    <color name="cyan">#2DC1DC</color>
+    <color name="dark_cyan">#1C7993</color>
     <color name="bright_grey">#66AFAFAF</color>
     <color name="colorPlaylist_background">#FFFFFF</color>
     <color name="colorPlaylist_addPlaylist">#7CCEDC</color>
