--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -146,13 +146,15 @@
     <TextView
         android:id="@+id/music_player_song_title"
         style="@style/HorizontalAutoScrollTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="50dp"
         android:text="@string/default_song_name"
         android:textColor="@color/white"
         android:textSize="26sp"
         app:layout_constraintBottom_toTopOf="@+id/music_player_seekbar"
+        app:layout_constraintEnd_toStartOf="@+id/music_player_menu_btn"
         app:layout_constraintStart_toStartOf="@+id/music_player_song_current_position" />
 
     <TextView
@@ -171,12 +173,13 @@
     <TextView
         android:id="@+id/music_player_song_artist"
         style="@style/HorizontalAutoScrollTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/default_artist_name"
         android:textColor="@color/white"
         android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/music_player_song_title"
         app:layout_constraintStart_toStartOf="@+id/music_player_song_current_position"
         app:layout_constraintTop_toBottomOf="@+id/music_player_song_title"
         tools:ignore="TextContrastCheck" />
